kubernetes/vproapp-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vpro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpro-app
  template:
    metadata:
      labels:
        app: vpro-app
    spec:
      containers:
        - name: vproapp
          image: vprofile/vprofileapp
          ports:
            - name: vproapp-port
              containerPort: 8080
