kubernetes/vprodb-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vpro-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpro-db
  template:
    metadata:
      labels:
        app: vpro-db
    spec:
      containers:
        - name: vprodb
          image: shady25/vprodb
          ports:
            - name: vprodb-port
              containerPort: 3306
