kubernetes/vprormq-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq01
  labels:
    app: vpro-rmq01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprormq01
  template:
    metadata:
      labels:
        app: vprormq01
    spec:
      containers:
        - name: vprormq01
          image: rabbitmq
          ports:
          - name: vprormq01-port
            containerPort: 15672
