kubernetes/vproapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: vpro-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
