kubernetes/vprormq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  selector:
    app: vpro-rmq
  ports:
  - port: 5672
    targetPort: vprormq-port
    protocol: TCP
